# crankshaft

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
examples/init/: main.cxx
include/: crankshaft.h
src/: cra_closure_execute_and_finalize.c  cra_destroy.c  cra_engine_bake_texture.c  cra_engine_block_new.c  cra_engine_delete.c  cra_engine_get_user_pointer.c  cra_engine_init.c  cra_engine_new.c  cra_engine_set_user_pointer.c  cra_engine_stop.c  cra_init.c  cra_log_set_level.c  cra_poll_events.c  cra_renderpipeline_init.c  cra_window_delete.c  cra_window_get_engine.c  cra_window_load_gl.c  cra_window_new.c  cra_window_on_close.c  cra_window_shouldclose.c  crankshaft_internal.c  crankshaft_internal.h  glfw.h  icra.h  icra_checks.c  icra_checks.h  icra_crankshaft.c  icra_crankshaft.h  icra_engine.c  icra_engine.h  icra_gl_program.c  icra_gl_program.h  icra_gl_renderquad.c  icra_gl_renderquad.h  icra_gl_vao.c  icra_gl_vao.h  icra_log.c  icra_log.h  icra_mem.c  icra_mem.h  (+9 more)
